# agent-frameworks

./: .gitignore  README.md
demos/mcp-demo/: 0_simple_agent.py  1_simple_agent.py  2_react_agent.py  3_simple_agent_with_RAG.py  Makefile  README.md  client_tool.py  pyproject.toml  run_client_llamastack.sh  run_server_llamastack.sh
demos/mcp-demo/build_mcp/: Containerfile  deployment.yaml  mcp_tools.py
experiments/: tools.py
experiments/max_params_per_tool/: README.md  max_params_per_tool.py
experiments/max_tool_per_agent/: .env.example  README.md  multi-builtintools.py
prototype/frameworks/autogen/: .env.example  README.md  main.py
prototype/frameworks/bee/: README.md  app.py  parasol.ts  prisolv3.ts  prisolv5.ts  server.py  streamlit_app.py
prototype/frameworks/crewai/: .env.example  README.md  crewai_builder.py  main.py  pyproject.toml  ui.py
prototype/frameworks/langgraph/: Containerfile  README.md  agent.py  constant.py  fastapi_server.py  insurance_workflow.py  requirements.txt  sample.env  server.py  streamlit_client.py
prototype/frameworks/llamaindexg/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_ui.py
prototype/frameworks/llamastack/: .env.example  README.md  requirements.txt
prototype/frameworks/mcp/: .env.example  README.md  mcp_client.py  pyproject.toml  tool_server.py
prototype/frameworks/openweb-ui/: README.md
prototype/frameworks/pydantic-ai/: .env.example  agents.yaml  compile_workflow.py  compiled_workflow_test.py  custom_tools.py  main.py  pydanticai_demo.py  pyproject.toml  tasks.yaml  ui.py
(+57 files in other folders)
